--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Boolando</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/utilities.css">
+    <link rel=“stylesheet” href=“https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css”>
 </head>
 
 <body>
@@ -19,22 +20,131 @@
             <div class="container-logo d-flex flex-align-center flex-justify-center">
                 <img src="img/boolean-logo.png" class="logo" alt="logoBoolean">
             </div>
-		    <div class="container-icon d-flex flex-align-center flex-justify-center">
-                <i class="fa-regular fa-user"></i>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-bag-shopping"></i>
+		    <div class="container-icon">
+                <a href="#"><i class="fa-regular fa-user"></i></a>
+                <a href="#"><i class="fa-regular fa-heart"></i></a>
+                <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
 		    </div>
         </div>
     </header>
 
     <main>
         <div class="container-main d-flex flex-justify-between">
-            <div class="container-img-1">
-                <img src="img/1.webp" class="img-1" alt="modello1">
-                <img src="img/1b.webp" class="img-1b" alt="modello1b">
+            <div class="card">
+                <div class="card-image">
+                    <img class="main-image" src="img/1.webp" alt="Product #1">
+                    <img class="secondary-image" src="img/1b.webp" alt="Product #1">
+                    <i class="wishlist fa-solid fa-heart"></i>
+                    <div class="badges">
+                        <div class="badge bg-discount">-50%</div>
+                        <div class="badge bg-eco">Sostenibilità</div>
+                    </div>
+                </div>
+                <div class="card-info">
+                    <span class="article-brand">Levi's</span>
+                    <h3 class="article-name">RELAXED FIT TEE UNISEX</h3>
+                    <strong class="article-price">14,99 &euro;</strong>
+                    <span class="no-price"> 29,99 &euro;</span>
+                </div>
             </div>
-        </div>
-
+            <div class="card">
+                <div class="card-image">
+                    <img class="main-image" src="img/2.webp" alt="Product #1">
+                    <img class="secondary-image" src="img/2b.webp" alt="Product #1">
+                    <i class="wishlist fa-solid fa-heart"></i>
+                    <div class="badges">
+                        <div class="badge bg-discount">-50%</div>
+                        <div class="badge bg-eco">Sostenibilità</div>
+                    </div>
+                </div>
+                <div class="card-info">
+                    <span class="article-brand">Guess</span>
+                    <h3 class="article-name">ROSES TEE</h3>
+                    <strong class="article-price">20,99 &euro;</strong>
+                    <span class="no-price"> 29,99 &euro;</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img class="main-image" src="img/3.webp" alt="Product #1">
+                    <img class="secondary-image" src="img/3b.webp" alt="Product #1">
+                    <i class="wishlist fa-solid fa-heart"></i>
+                    <div class="badges">
+                        <div class="badge bg-discount">-50%</div>
+                        <div class="badge bg-eco">Sostenibilità</div>
+                    </div>
+                </div>
+                <div class="card-info">
+                    <span class="article-brand">Come Zucchero Filato</span>
+                    <h3 class="article-name">VOGLIA DI COLORI PASTELLO</h3>
+                    <strong class="article-price">129,99 &euro;</strong>
+                    <span class="no-price"> 184,99 &euro;</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img class="main-image" src="img/4.webp" alt="Product #1">
+                    <img class="secondary-image" src="img/4b.webp" alt="Product #1">
+                    <i class="wishlist fa-solid fa-heart"></i>
+                    <div class="badges">
+                        <div class="badge bg-discount">-50%</div>
+                        <div class="badge bg-eco">Sostenibilità</div>
+                    </div>
+                </div>
+                <div class="card-info">
+                    <span class="article-brand">Levi's</span>
+                    <h3 class="article-name">TEE UNISEX</h3>
+                    <strong class="article-price">14,99 &euro;</strong>
+                    <span class="no-price"> 29,99 &euro;</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img class="main-image" src="img/5.webp" alt="Product #1">
+                    <img class="secondary-image" src="img/5b.webp" alt="Product #1">
+                    <i class="wishlist fa-solid fa-heart"></i>
+                    <div class="badges">
+                        <div class="badge bg-discount">-50%</div>
+                        <div class="badge bg-eco">Sostenibilità</div>
+                    </div>
+                </div>
+                <div class="card-info">
+                    <span class="article-brand">Maya Deluxe</span>
+                    <h3 class="article-name">STRIPE BODICE</h3>
+                    <strong class="article-price">99,99 &euro;</strong>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image">
+                    <img class="main-image" src="img/6.webp" alt="Product #1">
+                    <img class="secondary-image" src="img/6b.webp" alt="Product #1">
+                    <i class="wishlist fa-solid fa-heart"></i>
+                    <div class="badges">
+                        <div class="badge bg-discount">-50%</div>
+                        <div class="badge bg-eco">Sostenibilità</div>
+                    </div>
+                </div>
+                <div class="card-info">
+                    <span class="article-brand">Esprite</span>
+                    <h3 class="article-name">MAGLIONE - BLACK</h3>
+                    <strong class="article-price">29,99 &euro; </strong>
+                </div>
+            </div>
+        </div>    
     </main>
+
+    <footer>
+        <div class="container-footer">
+            <div class="foot-item">
+                <h2>Boolando s.r.l.</h2>
+                <ul>
+                    <li><a href="#" class="link">Informazioni legali</a></li>
+                    <li><a href="#" class="link">Informativa sulla privacy</a></li>
+                    <li><a href="#" class="link">Diritto di recesso</a></li>
+                </ul>
+            </div>
+            
+        </div>
+    </footer>
 </body>
 </html>
